fix: create-event css -- align inputs

--- a/src/blocks/Form.css
+++ b/src/blocks/Form.css
@@ -7,14 +7,20 @@
 }
 
 .form__label {
-  display: flex;
-  gap: 10px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.form__text {
+  margin: 0 0 5px;
 }
 
 .form__input {
   border-color: #d94e38;
   border-radius: 10px;
   color: black;
+  min-width: 200px;
+  text-align: center;
 }
 
 .form__input:focus {
@@ -25,7 +31,11 @@
 .form__button {
   font-family: "Sacramento", Arial, sans-serif;
   padding: 5px 40px 0;
-  color: #d94e27;
-  background-color: #fff;
+  color: #fff;
+  background-color: #d94e28;
   border-radius: 10px;
+  min-width: 230px;
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
 }
